src/test/deca/context/invalid/sansObjet/BadIf.deca
{
    if (2020){
        println("Hello");
    }
}